org.gpr4j/src/org/gpr4j/internal/grammar/GprParser.java
package org.gpr4j.internal.grammar;

// Generated from D:\Users\RS\workspace_ada\gpr4j\org.gpr4j\src\org\gpr4j\internal\grammar\Gpr.g4 by ANTLR 4.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GprParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, STRING_LITERAL=2, COMMA=3, SEMI_COLON=4, DOT=5, LPAR=6, RPAR=7, 
		RARROW=8, PIPE=9, COLON=10, AFFECTATION_SIGN=11, AMPERSAND=12, APOSTROPHE=13, 
		ALL=14, AT=15, CASE=16, END=17, FOR=18, IS=19, LIMITED=20, NULL=21, OTHERS=22, 
		PACKAGE=23, PROJECT=24, RENAMES=25, TYPE=26, USE=27, WHEN=28, WITH=29, 
		EXTENDS=30, EXTERNAL=31, IDENTIFIER=32, WS=33;
	public static final String[] tokenNames = {
		"<INVALID>", "COMMENT", "STRING_LITERAL", "','", "';'", "'.'", "'('", 
		"')'", "'=>'", "'|'", "':'", "':='", "'&'", "'''", "ALL", "AT", "CASE", 
		"END", "FOR", "IS", "LIMITED", "NULL", "OTHERS", "PACKAGE", "PROJECT", 
		"RENAMES", "TYPE", "USE", "WHEN", "WITH", "EXTENDS", "EXTERNAL", "IDENTIFIER", 
		"WS"
	};
	public static final int
		RULE_project = 0, RULE_context_clause = 1, RULE_with_clause = 2, RULE_path_name = 3, 
		RULE_project_declaration = 4, RULE_simple_project_declaration = 5, RULE_name = 6, 
		RULE_simple_name = 7, RULE_declarative_item = 8, RULE_simple_declarative_item = 9, 
		RULE_typed_string_declaration = 10, RULE_case_statement = 11, RULE_case_item = 12, 
		RULE_discrete_choice_list = 13, RULE_package_declaration = 14, RULE_package_spec = 15, 
		RULE_package_renaming = 16, RULE_package_extension = 17, RULE_typed_variable_declaration = 18, 
		RULE_attribute_declaration = 19, RULE_attribute_designator = 20, RULE_attribute_reference = 21, 
		RULE_attribute_prefix = 22, RULE_external_value = 23, RULE_variable_declaration = 24, 
		RULE_expression = 25, RULE_term = 26, RULE_string_expression = 27, RULE_string_list = 28, 
		RULE_empty_declaration = 29;
	public static final String[] ruleNames = {
		"project", "context_clause", "with_clause", "path_name", "project_declaration", 
		"simple_project_declaration", "name", "simple_name", "declarative_item", 
		"simple_declarative_item", "typed_string_declaration", "case_statement", 
		"case_item", "discrete_choice_list", "package_declaration", "package_spec", 
		"package_renaming", "package_extension", "typed_variable_declaration", 
		"attribute_declaration", "attribute_designator", "attribute_reference", 
		"attribute_prefix", "external_value", "variable_declaration", "expression", 
		"term", "string_expression", "string_list", "empty_declaration"
	};

	@Override
	public String getGrammarFileName() { return "Gpr.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public GprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProjectContext extends ParserRuleContext {
		public Context_clauseContext context_clause() {
			return getRuleContext(Context_clauseContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GprParser.EOF, 0); }
		public Project_declarationContext project_declaration() {
			return getRuleContext(Project_declarationContext.class,0);
		}
		public ProjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_project; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).enterProject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).exitProject(this);
		}
	}

	public final ProjectContext project() throws RecognitionException {
		ProjectContext _localctx = new ProjectContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_project);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60); context_clause();
			setState(61); project_declaration();
			setState(62); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Context_clauseContext extends ParserRuleContext {
		public With_clauseContext with_clause(int i) {
			return getRuleContext(With_clauseContext.class,i);
		}
		public List<With_clauseContext> with_clause() {
			return getRuleContexts(With_clauseContext.class);
		}
		public Context_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_context_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).enterContext_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).exitContext_clause(this);
		}
	}

	public final Context_clauseContext context_clause() throws RecognitionException {
		Context_clauseContext _localctx = new Context_clauseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_context_clause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WITH) {
				{
				{
				setState(64); with_clause();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class With_clauseContext extends ParserRuleContext {
		public Path_nameContext first_path;
		public Path_nameContext other_path;
		public TerminalNode WITH() { return getToken(GprParser.WITH, 0); }
		public List<Path_nameContext> path_name() {
			return getRuleContexts(Path_nameContext.class);
		}
		public List<TerminalNode> COMMA() { return getTokens(GprParser.COMMA); }
		public TerminalNode SEMI_COLON() { return getToken(GprParser.SEMI_COLON, 0); }
		public Path_nameContext path_name(int i) {
			return getRuleContext(Path_nameContext.class,i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(GprParser.COMMA, i);
		}
		public With_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_with_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).enterWith_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).exitWith_clause(this);
		}
	}

	public final With_clauseContext with_clause() throws RecognitionException {
		With_clauseContext _localctx = new With_clauseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_with_clause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70); match(WITH);
			setState(71); ((With_clauseContext)_localctx).first_path = path_name();
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(72); match(COMMA);
				setState(73); ((With_clauseContext)_localctx).other_path = path_name();
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79); match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Path_nameContext extends ParserRuleContext {
		public TerminalNode STRING_LITERAL() { return getToken(GprParser.STRING_LITERAL, 0); }
		public Path_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_path_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).enterPath_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).exitPath_name(this);
		}
	}

	public final Path_nameContext path_name() throws RecognitionException {
		Path_nameContext _localctx = new Path_nameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_path_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81); match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Project_declarationContext extends ParserRuleContext {
		public Simple_project_declarationContext simple_project_declaration() {
			return getRuleContext(Simple_project_declarationContext.class,0);
		}
		public Project_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_project_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).enterProject_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).exitProject_declaration(this);
		}
	}

	public final Project_declarationContext project_declaration() throws RecognitionException {
		Project_declarationContext _localctx = new Project_declarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_project_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83); simple_project_declaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Simple_project_declarationContext extends ParserRuleContext {
		public NameContext begin_project_name;
		public NameContext end_project_name;
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public TerminalNode IS() { return getToken(GprParser.IS, 0); }
		public Declarative_itemContext declarative_item(int i) {
			return getRuleContext(Declarative_itemContext.class,i);
		}
		public List<Declarative_itemContext> declarative_item() {
			return getRuleContexts(Declarative_itemContext.class);
		}
		public TerminalNode SEMI_COLON() { return getToken(GprParser.SEMI_COLON, 0); }
		public TerminalNode END() { return getToken(GprParser.END, 0); }
		public TerminalNode PROJECT() { return getToken(GprParser.PROJECT, 0); }
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public Simple_project_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_project_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).enterSimple_project_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).exitSimple_project_declaration(this);
		}
	}

	public final Simple_project_declarationContext simple_project_declaration() throws RecognitionException {
		Simple_project_declarationContext _localctx = new Simple_project_declarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_simple_project_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85); match(PROJECT);
			setState(86); ((Simple_project_declarationContext)_localctx).begin_project_name = name();
			setState(87); match(IS);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CASE) | (1L << FOR) | (1L << NULL) | (1L << PACKAGE) | (1L << TYPE) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(88); declarative_item();
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94); match(END);
			setState(95); ((Simple_project_declarationContext)_localctx).end_project_name = name();
			setState(96); match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public Simple_nameContext first;
		public Simple_nameContext other;
		public List<TerminalNode> DOT() { return getTokens(GprParser.DOT); }
		public Simple_nameContext simple_name(int i) {
			return getRuleContext(Simple_nameContext.class,i);
		}
		public List<Simple_nameContext> simple_name() {
			return getRuleContexts(Simple_nameContext.class);
		}
		public TerminalNode DOT(int i) {
			return getToken(GprParser.DOT, i);
		}
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).exitName(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98); ((NameContext)_localctx).first = simple_name();
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(99); match(DOT);
				setState(100); ((NameContext)_localctx).other = simple_name();
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Simple_nameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(GprParser.IDENTIFIER, 0); }
		public Simple_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).enterSimple_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).exitSimple_name(this);
		}
	}

	public final Simple_nameContext simple_name() throws RecognitionException {
		Simple_nameContext _localctx = new Simple_nameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_simple_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106); match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declarative_itemContext extends ParserRuleContext {
		public Package_declarationContext package_declaration() {
			return getRuleContext(Package_declarationContext.class,0);
		}
		public Typed_string_declarationContext typed_string_declaration() {
			return getRuleContext(Typed_string_declarationContext.class,0);
		}
		public Simple_declarative_itemContext simple_declarative_item() {
			return getRuleContext(Simple_declarative_itemContext.class,0);
		}
		public Declarative_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarative_item; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).enterDeclarative_item(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).exitDeclarative_item(this);
		}
	}

	public final Declarative_itemContext declarative_item() throws RecognitionException {
		Declarative_itemContext _localctx = new Declarative_itemContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declarative_item);
		try {
			setState(111);
			switch (_input.LA(1)) {
			case CASE:
			case FOR:
			case NULL:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(108); simple_declarative_item();
				}
				break;
			case TYPE:
				enterOuterAlt(_localctx, 2);
				{
				setState(109); typed_string_declaration();
				}
				break;
			case PACKAGE:
				enterOuterAlt(_localctx, 3);
				{
				setState(110); package_declaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Simple_declarative_itemContext extends ParserRuleContext {
		public Case_statementContext case_statement() {
			return getRuleContext(Case_statementContext.class,0);
		}
		public Variable_declarationContext variable_declaration() {
			return getRuleContext(Variable_declarationContext.class,0);
		}
		public Attribute_declarationContext attribute_declaration() {
			return getRuleContext(Attribute_declarationContext.class,0);
		}
		public Empty_declarationContext empty_declaration() {
			return getRuleContext(Empty_declarationContext.class,0);
		}
		public Typed_variable_declarationContext typed_variable_declaration() {
			return getRuleContext(Typed_variable_declarationContext.class,0);
		}
		public Simple_declarative_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_declarative_item; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).enterSimple_declarative_item(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).exitSimple_declarative_item(this);
		}
	}

	public final Simple_declarative_itemContext simple_declarative_item() throws RecognitionException {
		Simple_declarative_itemContext _localctx = new Simple_declarative_itemContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_simple_declarative_item);
		try {
			setState(118);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(113); variable_declaration();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(114); typed_variable_declaration();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(115); attribute_declaration();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(116); case_statement();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(117); empty_declaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Typed_string_declarationContext extends ParserRuleContext {
		public Token first;
		public Token other;
		public TerminalNode IS() { return getToken(GprParser.IS, 0); }
		public TerminalNode TYPE() { return getToken(GprParser.TYPE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(GprParser.COMMA); }
		public TerminalNode SEMI_COLON() { return getToken(GprParser.SEMI_COLON, 0); }
		public List<TerminalNode> STRING_LITERAL() { return getTokens(GprParser.STRING_LITERAL); }
		public TerminalNode LPAR() { return getToken(GprParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(GprParser.RPAR, 0); }
		public TerminalNode STRING_LITERAL(int i) {
			return getToken(GprParser.STRING_LITERAL, i);
		}
		public Simple_nameContext simple_name() {
			return getRuleContext(Simple_nameContext.class,0);
		}
		public TerminalNode COMMA(int i) {
			return getToken(GprParser.COMMA, i);
		}
		public Typed_string_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typed_string_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).enterTyped_string_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).exitTyped_string_declaration(this);
		}
	}

	public final Typed_string_declarationContext typed_string_declaration() throws RecognitionException {
		Typed_string_declarationContext _localctx = new Typed_string_declarationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_typed_string_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120); match(TYPE);
			setState(121); simple_name();
			setState(122); match(IS);
			setState(123); match(LPAR);
			setState(124); ((Typed_string_declarationContext)_localctx).first = match(STRING_LITERAL);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(125); match(COMMA);
				setState(126); ((Typed_string_declarationContext)_localctx).other = match(STRING_LITERAL);
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132); match(RPAR);
			setState(133); match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Case_statementContext extends ParserRuleContext {
		public List<TerminalNode> CASE() { return getTokens(GprParser.CASE); }
		public Case_itemContext case_item(int i) {
			return getRuleContext(Case_itemContext.class,i);
		}
		public TerminalNode IS() { return getToken(GprParser.IS, 0); }
		public TerminalNode SEMI_COLON() { return getToken(GprParser.SEMI_COLON, 0); }
		public TerminalNode END() { return getToken(GprParser.END, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public List<Case_itemContext> case_item() {
			return getRuleContexts(Case_itemContext.class);
		}
		public TerminalNode CASE(int i) {
			return getToken(GprParser.CASE, i);
		}
		public Case_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_case_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).enterCase_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).exitCase_statement(this);
		}
	}

	public final Case_statementContext case_statement() throws RecognitionException {
		Case_statementContext _localctx = new Case_statementContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_case_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135); match(CASE);
			setState(136); name();
			setState(137); match(IS);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHEN) {
				{
				{
				setState(138); case_item();
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(144); match(END);
			setState(145); match(CASE);
			setState(146); match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Case_itemContext extends ParserRuleContext {
		public List<Case_statementContext> case_statement() {
			return getRuleContexts(Case_statementContext.class);
		}
		public Case_statementContext case_statement(int i) {
			return getRuleContext(Case_statementContext.class,i);
		}
		public Variable_declarationContext variable_declaration(int i) {
			return getRuleContext(Variable_declarationContext.class,i);
		}
		public Discrete_choice_listContext discrete_choice_list() {
			return getRuleContext(Discrete_choice_listContext.class,0);
		}
		public Attribute_declarationContext attribute_declaration(int i) {
			return getRuleContext(Attribute_declarationContext.class,i);
		}
		public Empty_declarationContext empty_declaration(int i) {
			return getRuleContext(Empty_declarationContext.class,i);
		}
		public TerminalNode WHEN() { return getToken(GprParser.WHEN, 0); }
		public List<Attribute_declarationContext> attribute_declaration() {
			return getRuleContexts(Attribute_declarationContext.class);
		}
		public List<Variable_declarationContext> variable_declaration() {
			return getRuleContexts(Variable_declarationContext.class);
		}
		public TerminalNode RARROW() { return getToken(GprParser.RARROW, 0); }
		public List<Empty_declarationContext> empty_declaration() {
			return getRuleContexts(Empty_declarationContext.class);
		}
		public Case_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_case_item; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).enterCase_item(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GprListener ) ((GprListener)listener).exitCase_item(this);
		}
	}
